syntax = "proto3";

package yandex.cloud.priv.datatransfer.v1.endpoint;

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/datatransfer/v1/endpoint;tm_server_endpoint";

import "yandex/cloud/priv/datatransfer/v1/endpoint/common.proto";

message GreenplumHostPort {
    string host = 1;
    int64 port = 2;
}
message GreenplumHAPair {
    GreenplumHostPort primary = 1;
    GreenplumHostPort mirror = 2;
}
message GreenplumCluster {
    GreenplumHAPair coordinator = 1;
    repeated GreenplumHAPair segments = 2;
}
message PgAuthenticationProperties {
    Secret password = 1;
    string ca_certificate = 2;
}
message GreenplumAddress {
    oneof address {
        string mdb_cluster_id = 1;
        GreenplumCluster on_premise = 2;
    }
}
message GreenplumConnection {
    GreenplumAddress address = 1;
    string database = 2;
    string user = 3;
    PgAuthenticationProperties authentication = 4;
    string subnet_id = 5;
    repeated string security_groups = 6;
}
message GpSourceAdvancedProperties {
    bool strong_consistency = 1;
    int64 batch_limit_rows = 2;
    int64 batch_limit_size = 3;
    string service_schema = 4;
}
message GreenplumSource {
    GreenplumConnection connection = 1;
    repeated string include_tables = 5;
    repeated string exclude_tables = 6;
    GpSourceAdvancedProperties advanced_properties = 8;
}
message GreenplumTarget {
    GreenplumConnection connection = 1;
    CleanupPolicy cleanup_policy = 2;
}
