syntax = "proto3";

package yandex.cloud.events.lockbox;

import "google/protobuf/timestamp.proto";
import "google/rpc/status.proto";
import "yandex/cloud/access/access.proto";
import "yandex/cloud/events/common.proto";
import "yandex/cloud/validation.proto";
import "yandex/cloud/events/options.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/duration.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/events/lockbox;lockbox";
option java_package = "yandex.cloud.api.events.lockbox";
option java_outer_classname = "SecretEvents";

message CreateSecret {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8;
  Response response = 9;

  message EventDetails {
    string secret_id = 1;
    string secret_name = 2;
    string secret_version_id = 3;
    string kms_key_id = 4;
    bool deletion_protection = 5;
    string status = 6;
    string secret_version_status = 7;
    repeated string secret_version_payload_entry_keys = 8;
  }

  message RequestParameters {
    string folder_id = 1;
    string name = 2;
    map<string, string> labels = 3;
    string kms_key_id = 4;
    repeated string version_payload_entries_keys = 5;
    bool deletion_protection = 6;
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    ERROR = 2;
    DONE = 3;
  }
}

message PayloadEntryDelta {
  string key = 1;
  DeltaType delta_type = 2;

  enum DeltaType {
    DELTA_TYPE_UNSPECIFIED = 0;
    ADDED = 1;
    UPDATED = 2;
    REMOVED = 3;
  }
}

message UpdateSecret {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8;
  Response response = 9;

  message EventDetails {
    string secret_id = 1;
    string secret_name = 2;
    string secret_version_id = 3;
    string kms_key_id = 4;
    bool deletion_protection = 5;
    string status = 6;
    string secret_version_status = 7;
    repeated string secret_version_payload_entry_keys = 8;
  }

  message RequestParameters {
    string secret_id = 1;
    google.protobuf.FieldMask update_mask = 2;
    map<string, string> labels = 3;
    string name = 4;
    bool deletion_protection = 5;
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    ERROR = 2;
    DONE = 3;
  }
}

message DeleteSecret {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8;
  Response response = 9;

  message EventDetails {
    string secret_id = 1;
    string secret_name = 2;
    string secret_version_id = 3;
    string kms_key_id = 4;
    bool deletion_protection = 5;
    string status = 6;
    string secret_version_status = 7;
    repeated string secret_version_payload_entry_keys = 8;
  }

  message RequestParameters {
    string secret_id = 1;
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    ERROR = 2;
    DONE = 3;
  }
}

message ActivateSecret {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8;
  Response response = 9;

  message EventDetails {
    string secret_id = 1;
    string secret_name = 2;
    string secret_version_id = 3;
    string kms_key_id = 4;
    bool deletion_protection = 5;
    string status = 6;
    string secret_version_status = 7;
    repeated string secret_version_payload_entry_keys = 8;
  }

  message RequestParameters {
    string secret_id = 1;
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    ERROR = 2;
    DONE = 3;
  }
}

message DeactivateSecret {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8;
  Response response = 9;

  message EventDetails {
    string secret_id = 1;
    string secret_name = 2;
    string secret_version_id = 3;
    string kms_key_id = 4;
    bool deletion_protection = 5;
    string status = 6;
    string secret_version_status = 7;
    repeated string secret_version_payload_entry_keys = 8;
  }

  message RequestParameters {
    string secret_id = 1;
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    ERROR = 2;
    DONE = 3;
  }
}

message AddVersion {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8;
  Response response = 9;

  message EventDetails {
    string secret_id = 1;
    string secret_name = 2;
    repeated string payload_entry_keys = 3;
    string new_secret_version_id = 4;
    string old_secret_version_id = 5;
    repeated PayloadEntryDelta payload_entry_deltas = 6;
    string status = 7;
    string secret_version_status = 8;


    message PayloadEntryDelta {
      string key = 1;
      DeltaType delta_type = 2;

      enum DeltaType {
        DELTA_TYPE_UNSPECIFIED = 0;
        ADDED = 1;
        UPDATED = 2;
        REMOVED = 3;
      }
    }
  }

  message RequestParameters {
    string secret_id = 1;
    string base_version_id = 2;
    repeated string payload_entries_keys = 3;
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    ERROR = 2;
    DONE = 3;
  }
}

message ScheduleVersionDestruction {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8;
  Response response = 9;

  message EventDetails {
    string secret_id = 1;
    string secret_name = 2;
    string secret_version_id = 3;
    google.protobuf.Timestamp destroy_at = 4;
    string status = 5;
    string secret_version_status = 6;
    repeated string secret_version_payload_entry_keys = 7;
  }

  message RequestParameters {
    string secret_id = 1;
    string version_id = 2;
    google.protobuf.Duration pending_period = 3;
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    ERROR = 2;
    DONE = 3;
  }
}

message CancelVersionDestruction {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8;
  Response response = 9;

  message EventDetails {
    string secret_id = 1;
    string secret_name = 2;
    string secret_version_id = 3;
    string secret_version_status = 4;
    repeated string secret_version_payload_entry_keys = 5;
    string status = 6;
  }

  message RequestParameters {
    string secret_id = 1;
    string version_id = 2;
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    ERROR = 2;
    DONE = 3;
  }
}

message SetSecretAccessBindings {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8;
  Response response = 9;

  message EventDetails {
    string secret_id = 1;
    string secret_name = 2;
    repeated access.AccessBinding access_bindings = 3;
    repeated access.AccessBindingDelta access_binding_deltas = 4;
  }

  message RequestParameters {
    string secret_id = 1;
    repeated access.AccessBinding access_bindings = 2;
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
}

message UpdateSecretAccessBindings {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8;
  Response response = 9;

  message EventDetails {
    string secret_id = 1;
    string secret_name = 2;
    repeated access.AccessBindingDelta access_binding_deltas = 3;
    repeated access.AccessBinding access_bindings = 4;
  }

  message RequestParameters {
    string secret_id = 1;
    repeated access.AccessBindingDelta access_binding_deltas = 2;
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
}
